# tomodachi

./: .gitignore  README.md  pyproject.toml
tests/: test_tomodachi.py
tomodachi/: itests.py
voice/: Cargo.toml  __init__.pyi  pyproject.toml
voice/src/: lib.rs  record.rs
