[tool.poetry]
name = "tomodachi"
version = "0.1.0"
description = ""
authors = ["quiktea <wishymovies@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
maturin = "^0.12.15"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
poethepoet = "^0.13.1"

[tool.poe.tasks]
test = "poetry run pytest"
itest = "py tomodachi/itests.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"